--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,7 @@
   }
 } */
 
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* * {
+  background-color: rgba(195, 176, 0, 0.068) !important;
+  outline: 1px solid rgb(144, 108, 0) !important;
 } */
